--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.14.0",
-    "hbs": "^4.0.0"
+    "hbs": "^4.0.0",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {},
   "description": ""
