--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.14.0",
-    "hbs": "^4.0.0",
+    "express": "^4.16.3",
+    "hbs": "^4.0.1",
+    "request": "^2.87.0",
     "yargs": "^12.0.1"
   },
   "devDependencies": {},
